log
Thu, Mar 20, 2025  1:38:00 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Thu, Mar 20, 2025  1:56:44 PM: 
 exercises.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:88:11: error: unused variable 'pilaAux' [-Werror=unused-variable]
    Stack* pilaAux ;
           ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
64b35d8
Thu, Mar 20, 2025  3:37:25 PM: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:99:11: error: unused variable 'pilaAux' [-Werror=unused-variable]
    Stack* pilaAux ;
           ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8f8aee2
Thu, Mar 20, 2025  3:37:45 PM: 
 exercises.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  0|5
total_score: 0/70
4b24660
Thu, Mar 20, 2025  5:33:57 PM: 
 tests:  0|5
total_score: 0/70
ed8306e
Thu, Mar 20, 2025  5:37:18 PM: 
 exercises.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:87:15: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int dato = first(L) ;
               ^~~~~
exercises.c:88:15: error: comparison between pointer and integer [-Werror]
    while(dato != NULL) {
               ^~
exercises.c:91:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
          dato = first(L) ;
               ^
exercises.c:93:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       else dato = next(L) ;
                 ^
cc1.exe: all warnings being treated as errors
Compilation failed
da2e7e5
